Reduced alpine image and java package + added prepare to export Fixed health check to be POSIX